--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
 
                 // テキストを設定
-                var font = new FontFace('Ndot77JPExtended', 'url(./fonts/Ndot77JPExtended.woff2)');
+                var font = new FontFace('Ndot77JPExtended', 'url(https://github.com/shibadogcap/ndot_wallpaper_maker/blob/main/fonts/Ndot77JPExtendedv1.1.4.woff2)');
                 font.load().then(function(loadedFont) {
                     document.fonts.add(loadedFont);
                     ctx.font = font_size_input.value + "px 'Ndot77JPExtended'";
