--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>NDOT Wallpaper Maker</title>
     <link rel="stylesheet" type="text/css" href="css/ndot_wallpaper_maker.css">
+    <meta name="google-site-verification" content="9XKlND8h27yIj7VVyfWY8T6g63ZhdRT18BK2Ynnx4fY" />
 </head>
 <body>
     <!-- ヘッダー。中央ぞろえでタイトルを表示-->
